--- a/Neuron_example.ipynb
+++ b/Neuron_example.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "b3c85975",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
     }
    ],
    "source": [
-    "yh01,fhopf=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,0,tau1,tau2,taus],xlist1[unstab_indx],[a21unstab],[4],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and τ estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
+    "yh01,fhopf=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,0,tau1,tau2,taus],xlist1[unstab_indx],[a21unstab],[4],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and a21 estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
     "yh1,conv1,=newton_new(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
