Added further detail for user understanding

--- a/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_example.ipynb
@@ -17,6 +17,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9a7af2a",
+   "metadata": {},
+   "source": [
+    "In this demo, we will be looking at inverted pendulum example, which models the motion of a pendulum that is trying to remain upright. For this demo we'll use the simplified system given by the delay differential equation (DDE) system:\n",
+    "```math\n",
+    "\\begin{align}\n",
+    "  \\dot{x}&= v(t)\\\\\n",
+    "  \\dot{v}&= \\sin(x(t)) - ax(t- \\tau) -bv(t-\\tau)\n",
+    "\\end{align}\n",
+    "```\n",
+    "where x(t) is the angle by the pendulum deviates from its upright positions, v(t) is the angular velocity and where τ is the delay is the time taken between the pendulum starting to fall/lean and the reaction to start righting the pendulum."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb768805",
+   "metadata": {},
+   "source": [
+    "The following packages and functions are needed:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "af26b77b",
@@ -25,7 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "stab_func (generic function with 1 method)"
+       "create_hopffunc (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -42,7 +65,24 @@
     "include(\"newton_new.jl\") #Newton function\n",
     "include(\"F_eq.jl\") #Initialisates a function to find equilibria \n",
     "include(\"track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
-    "include(\"stab_func.jl\") #finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)"
+    "include(\"stab_func.jl\") #finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
+    "include(\"create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddce32f3",
+   "metadata": {},
+   "source": [
+    "# Equilibria branches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55f7d06e",
+   "metadata": {},
+   "source": [
+    "We begin this demo by finding the equilibira branches:"
    ]
   },
   {
@@ -69,14 +109,14 @@
     "nd=1 #number of delays (single delay so nd=1)\n",
     "\n",
     "#Now we looking at finding the equilibria branches\n",
-    "y01,f_equ=F_eq(invpend_1delay,[0.0,0],[a,b,tau],nd,par_indx=1)#nd=1,pars_indx=1 as parameter a (the parameter we're varying) is the first parameter\n",
+    "y01,f_equ=F_eq(invpend_1delay,[0.0,0],[a,b,tau],nd,par_indx=1) #pars_indx=1 as parameter a (the parameter we're varying) is the first parameter\n",
     "#The above ouputs the initial guess for x,v and parameter 'a' and the equilibrium function\n",
     "\n",
     "ylist1,ytan1=track_curve_new(f_equ,y01,[0.0,0,1],nmax=1000) #initial tangent changes a (initial tangent=[0.0,0,1])\n",
     "ylist2,ytan2=track_curve_new(f_equ,y01,[1.0,0,0],nmax=400) #initial tangent changes x with initial tangent in postive x direction\n",
     "ylist3,ytan3=track_curve_new(f_equ,y01,[-1.0,0,0],nmax=400) #initial tangent changes x with initial tangent in negative x direction\n",
     "\n",
-    "\n",
+    "#Below plots the equilibria branches\n",
     "fig1=Figure()\n",
     "ax1=Axis(fig1[1,1],xlabel=\"a\",ylabel=\"x\")\n",
     "scatter!(ax1,[u[3] for u in ylist1],[u[1] for u in ylist1])\n",
@@ -87,17 +127,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "62c92adb",
-   "metadata": {},
-   "source": [
-    "# Stability"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a90ae648",
+   "id": "8a3ff49e",
    "metadata": {},
    "outputs": [
     {
@@ -121,6 +153,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "62c92adb",
+   "metadata": {},
+   "source": [
+    "# Stability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80d0e027",
+   "metadata": {},
+   "source": [
+    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past. For this example the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria - for more details look at ```stab_func```. The function ``` stab_func ``` has a first output of 1 is the equilibrium point if stable and has 0 if it is unstable. Below we find the stability of all the equilibria and plot them:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "89f9557e",
@@ -138,32 +186,31 @@
     }
    ],
    "source": [
-    "#Now we look at stability of the steady-state branches\n",
-    "xmat1=hcat([u[1] for u in ylist1],[u[2] for u in ylist1])\n",
-    "xlist1=[xmat1[i,:] for i in 1:size(xmat1,1)]\n",
-    "xmat2=hcat([u[1] for u in ylist2],[u[2] for u in ylist2])\n",
-    "xlist2=[xmat2[i,:] for i in 1:size(xmat2,1)]\n",
-    "xmat3=hcat([u[1] for u in ylist3],[u[2] for u in ylist3])\n",
-    "xlist3=[xmat3[i,:] for i in 1:size(xmat3,1)]\n",
+    "xmat1=hcat([u[1] for u in ylist1],[u[2] for u in ylist1]) #finds the values of x and v for the first equilibrium branch\n",
+    "xlist1=[xmat1[i,:] for i in 1:size(xmat1,1)]#creates a vector of vectors of all the first equilibria branch points\n",
+    "xmat2=hcat([u[1] for u in ylist2],[u[2] for u in ylist2]) #finds the values of x and v for the second equilibrium branch\n",
+    "xlist2=[xmat2[i,:] for i in 1:size(xmat2,1)]#creates a vector of vectors of all the second equilibria branch points\n",
+    "xmat3=hcat([u[1] for u in ylist3],[u[2] for u in ylist3]) #finds the values of x and v for the third equilibrium branch\n",
+    "xlist3=[xmat3[i,:] for i in 1:size(xmat3,1)]#creates a vector of vectors of all the third equilibria branch points\n",
     "\n",
-    "plist1=[u[3] for u in ylist1]\n",
-    "plist2=[u[3] for u in ylist2]\n",
-    "plist3=[u[3] for u in ylist3]\n",
+    "plist1=[u[3] for u in ylist1] #A vector of the values of a for the first equilibrium branch\n",
+    "plist2=[u[3] for u in ylist2] #A vector of the values of a for the second equilibrium branch\n",
+    "plist3=[u[3] for u in ylist3] #A vector of the values of a for the third equilibrium branch\n",
     "\n",
-    "xlist=vcat(xlist1,xlist2,xlist3)\n",
-    "plist=vcat(plist1,plist2,plist3)\n",
+    "xlist=vcat(xlist1,xlist2,xlist3) #combines all the equilibirium points into one vector\n",
+    "plist=vcat(plist1,plist2,plist3) #combines all values of parameter a into one vector\n",
     "\n",
     "neq=length(plist) #number of equilibrium points we're finding the stability of\n",
     "stab=fill(NaN,neq)\n",
     "\n",
     "for i in 1:neq\n",
-    "    stab[i]=stab_func(invpend_1delay,inpend1tau,xlist[i],[plist[i]],[a,b,tau],[1],nd,doprint=0)\n",
+    "    stab[i]=stab_func(invpend_1delay,inpend1tau,xlist[i],[plist[i]],[a,b,tau],[1],nd,doprint=0) #returns stability of the equilibiria (Outputs 1 for stable and 0 for unstable)\n",
     "end \n",
     "\n",
+    "stable=(stab.==1.0)#highlights indices of stable points (indicated by a 1 in stable vector)\n",
+    "unstable=(stab.==0.0)#highlights indices of unstable points (indicated by a 1 in unstable vector)\n",
     "\n",
-    "stable=(stab.==1.0)\n",
-    "unstable=(stab.==0.0)\n",
-    "\n",
+    "#Below plots the equilibria and shows their stability\n",
     "fig2=Figure()\n",
     "ax2=Axis(fig2[1,1],xlabel=\"a\",ylabel=\"x\")\n",
     "scatter!(ax2,plist[stable],[u[1] for u in xlist[stable]],label=\"stable\",color=\"green\")\n",
@@ -181,8 +228,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "208b8b1c",
+   "metadata": {},
+   "source": [
+    "The eigenvalues of the linearised system determine the equilibrium's stability. A Hopf bifurcation occurs when the stability behaviour changes and a pair of complex conugate eigenvalues of the linearised system crosses the imaginary axis and become purely imaginary, i.e. λ=±ω. We start finding the Hopf parameters by finding the initial guess of the ```a``` value for the Hopf bifurcation: "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "85cc51f2",
    "metadata": {},
    "outputs": [
@@ -198,15 +253,14 @@
    ],
    "source": [
     "stab_indx=findfirst(isequal(1.0),stab)#finds where stability changes first time\n",
-    "#unstab2_indx=findfirst(isequal(0.0),stab[101:end]) # finds where stability changes again \n",
-    "unstab2_indx=findfirst(isequal(0.0),stab[stab_indx+1:end])\n",
+    "unstab2_indx=findfirst(isequal(0.0),stab[stab_indx+1:end]) #finds where stability changes again\n",
     "hopf_indx=stab_indx+unstab2_indx #index of the initial guess where hopf bifurcation is\n",
     "plist[hopf_indx] #parameter guess for hopf bifurcation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "d2d0e31f",
    "metadata": {},
    "outputs": [
@@ -223,10 +277,9 @@
     }
    ],
    "source": [
-    "include(\"create_hopffunc.jl\")\n",
-    "yh01,fhopf=create_hopffunc(invpend_1delay,inpend1tau,[a,b,tau],xlist[hopf_indx],[plist[hopf_indx]],[1],nd)\n",
+    "yh01,fhopf=create_hopffunc(invpend_1delay,inpend1tau,[a,b,tau],xlist[hopf_indx],[plist[hopf_indx]],[1],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and a estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
-    "yh1,conv1,=newton_new(fhopf,yh01)\n",
+    "yh1,conv1,=newton_new(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
     "println(\"The true information for the Hopf bifurcation: $yh1\")\n",
     "println(\"converged?: $conv1\")\n",
     "a_hopf=yh1[end]\n",
@@ -237,8 +290,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4898f250",
+   "metadata": {},
+   "source": [
+    "# Continutation over (a,b)-plane"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34698695",
+   "metadata": {},
+   "source": [
+    "We continue the Hopf points in the a and b parameter plane:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "b7a8a5dc",
    "metadata": {},
    "outputs": [
@@ -254,14 +323,13 @@
     }
    ],
    "source": [
-    "yheq01,fhopfeq1=create_hopffunc(invpend_1delay,inpend1tau,[a_hopf,0,tau],[0.0,0],[a_hopf,0],[1,2],nd)\n",
-    "yheqlist1,heqtan1=track_curve_new(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,-1,-1],nmax=2000)\n",
+    "yheq01,fhopfeq1=create_hopffunc(invpend_1delay,inpend1tau,[a_hopf,0,tau],[0.0,0],[a_hopf,0],[1,2],nd) #initialises hopf function and initial guess for a≈3.59 and b=0\n",
+    "yheqlist1,heqtan1=track_curve_new(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,-1,-1],nmax=2000) #tracks over a and b plane\n",
     "\n",
     "#Below marks the Hopf bifurcation for fixed b=1.5\n",
     "a_vals=[u[end-1] for u in yheqlist1]\n",
     "b_vals=[u[end] for u in yheqlist1]\n",
     "b1_5indx=argmin(abs.([u[end] for u in yheqlist1].-1.5))\n",
-    "\n",
     "a1=a_vals[b1_5indx]\n",
     "b1=b_vals[b1_5indx]\n",
     "\n",
@@ -270,15 +338,15 @@
     "ax4=Axis(fig4[1,1],xlabel=\"a\",ylabel=\"b\")\n",
     "scatter!(ax4,[u[end-1] for u in yheqlist1[2:end]],[u[end] for u in yheqlist1[2:end]],color=\"green\",markersize=:7)\n",
     "hlines!(ax4,1.5,linestyle=:dash)\n",
-    "scatter!(ax4,a1,b1,marker=:diamond,color=:black)\n",
-    "vlines!(ax4,1,linestyle=:solid, linewidth=:5,color=:red)\n",
+    "scatter!(ax4,a1,b1,marker=:diamond,color=:black) # Hopf bifurcation for fixed b=1.5\n",
+    "vlines!(ax4,1,linestyle=:solid, linewidth=:5,color=:red) #red line represents the fact that a pitchfork bifurcation occurs at a=1 for all b values\n",
     "ylims!(ax4,[0,6])\n",
     "fig4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "614d4f23",
    "metadata": {},
    "outputs": [
@@ -343,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "f3daba93",
    "metadata": {},
    "outputs": [
@@ -366,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "c0732f12",
    "metadata": {},
    "outputs": [
@@ -398,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "7fc15129",
    "metadata": {},
    "outputs": [
@@ -428,10 +496,10 @@
       "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:341 [inlined]\n",
       "  [9] \\(A::Matrix{Float64}, B::Vector{Float64})\n",
       "    @ LinearAlgebra C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\generic.jl:1132\n",
-      " [10] track_curve_new(userf::var\"#fhopf#386\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#385\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#32#36\"{var\"#fhopf#386\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#385\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
+      " [10] track_curve_new(userf::var\"#fhopf#147\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#146\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#32#36\"{var\"#fhopf#147\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#146\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
       "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\track_curve_new.jl:28\n",
       " [11] top-level scope\n",
-      "    @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X16sZmlsZQ==.jl:2"
+      "    @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X20sZmlsZQ==.jl:2"
      ]
     }
    ],
