Trialling continuation for tau=sqrt(2)

--- a/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_example.ipynb
@@ -302,7 +302,7 @@
    "id": "34698695",
    "metadata": {},
    "source": [
-    "We continue the Hopf points in the a and b parameter plane:"
+    "We continue the bifurcation points in the ```a``` and ```b``` parameter plane:"
    ]
   },
   {
@@ -345,8 +345,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "80d37037",
+   "metadata": {},
+   "source": [
+    "We'll look at the behaviour of the bifurcation points for τ=sqrt(2):"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
+   "id": "74d1d50f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SingularException",
+     "evalue": "SingularException(9)",
+     "output_type": "error",
+     "traceback": [
+      "SingularException(9)\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] checknonsingular\n",
+      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\factorization.jl:69 [inlined]\n",
+      "  [2] _check_lu_success\n",
+      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:84 [inlined]\n",
+      "  [3] #lu!#182\n",
+      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:92 [inlined]\n",
+      "  [4] lu!\n",
+      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:90 [inlined]\n",
+      "  [5] lu!\n",
+      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:89 [inlined]\n",
+      "  [6] _lu\n",
+      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:347 [inlined]\n",
+      "  [7] lu(::Matrix{Float64}; kwargs::@Kwargs{})\n",
+      "    @ LinearAlgebra C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:341\n",
+      "  [8] lu\n",
+      "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:341 [inlined]\n",
+      "  [9] \\(A::Matrix{Float64}, B::Vector{Float64})\n",
+      "    @ LinearAlgebra C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\generic.jl:1132\n",
+      " [10] newton_new(f::var\"#30#34\"{var\"#fhopf#203\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#202\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, x0::Vector{Float64}; h::Float64, df::var\"#16#18\"{var\"#30#34\"{var\"#fhopf#203\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#202\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, Float64}, tol::Float64, maxit::Int64)\n",
+      "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\newton_new.jl:12\n",
+      " [11] newton_new(f::Function, x0::Vector{Float64})\n",
+      "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\newton_new.jl:2\n",
+      " [12] track_curve_new(userf::var\"#fhopf#203\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#202\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#32#36\"{var\"#fhopf#203\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#202\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
+      "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\track_curve_new.jl:17\n",
+      " [13] top-level scope\n",
+      "    @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X35sZmlsZQ==.jl:3"
+     ]
+    }
+   ],
+   "source": [
+    "tau_trial2=sqrt(2)\n",
+    "yheq02,fhopfeq2=create_hopffunc(invpend_1delay,inpend1tau,[0,0,tau_trial2],[0.0,0],[0.0,0],[1,2],nd) #initialises hopf function and initial guess for a≈3.59 and b=0\n",
+    "yheqlist2,heqtan2=track_curve_new(fhopfeq2,yheq02,[0.0,0,0,0,0,0,0,1,1],nmax=2000) #tracks over a and b plane\n",
+    "\n",
+    "#Plot of continuation/tracking in (a,b) plane\n",
+    "fig5=Figure()\n",
+    "ax5=Axis(fig5[1,1],xlabel=\"a\",ylabel=\"b\")\n",
+    "scatter!(ax5,[u[end-1] for u in yheqlist2[2:end]],[u[end] for u in yheqlist2[2:end]],color=\"green\",markersize=:7)\n",
+    "#hlines!(ax5,1.5,linestyle=:dash)\n",
+    "#scatter!(ax5,a1,b1,marker=:diamond,color=:black) # Hopf bifurcation for fixed b=1.5\n",
+    "vlines!(ax5,1,linestyle=:solid, linewidth=:5,color=:red) #red line represents the fact that a pitchfork bifurcation occurs at a=1 for all b values\n",
+    "ylims!(ax5,[0,6])\n",
+    "fig5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "614d4f23",
    "metadata": {},
    "outputs": [
@@ -411,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "f3daba93",
    "metadata": {},
    "outputs": [
@@ -434,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "c0732f12",
    "metadata": {},
    "outputs": [
@@ -466,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "7fc15129",
    "metadata": {},
    "outputs": [
@@ -496,7 +563,7 @@
       "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:341 [inlined]\n",
       "  [9] \\(A::Matrix{Float64}, B::Vector{Float64})\n",
       "    @ LinearAlgebra C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\generic.jl:1132\n",
-      " [10] track_curve_new(userf::var\"#fhopf#147\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#146\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#32#36\"{var\"#fhopf#147\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#146\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
+      " [10] track_curve_new(userf::var\"#fhopf#266\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#265\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#32#36\"{var\"#fhopf#266\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#265\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
       "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\track_curve_new.jl:28\n",
       " [11] top-level scope\n",
       "    @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X20sZmlsZQ==.jl:2"
