Added fold function

--- a/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_example.ipynb
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "af26b77b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "create_hopffunc (generic function with 1 method)"
+       "create_foldfunc (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -66,7 +66,8 @@
     "include(\"F_eq.jl\") #Initialisates a function to find equilibria \n",
     "include(\"track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
     "include(\"stab_func.jl\") #finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
-    "include(\"create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values"
+    "include(\"create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
+    "include(\"create_foldfunc.jl\") #finds initial guess for fold information and creates a function that can find the true fold values"
    ]
   },
   {
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "fb745fe6",
    "metadata": {},
    "outputs": [
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "8a3ff49e",
    "metadata": {},
    "outputs": [
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "89f9557e",
    "metadata": {},
    "outputs": [
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "85cc51f2",
    "metadata": {},
    "outputs": [
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "d2d0e31f",
    "metadata": {},
    "outputs": [
@@ -291,6 +292,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3780ce90",
+   "metadata": {},
+   "source": [
+    "# Pitchfork bifurcation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82d4c7ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The information for the fold bifurcation: [-4.364586231138824e-8, -3.357483342219461e-19, 1.0, -1.4654017173557341e-26, 2.8186709523690343e-13, -3.3339397754698715e-33, 0.9999999999833323, 1.5000218070056848]\n",
+      "The value of 'a' that a fold occurs at is: 0.9999999999833323\n"
+     ]
+    }
+   ],
+   "source": [
+    "y0f1,ffold1=create_foldfunc(invpend_1delay,inpend1tau,[a,b,tau],[0.0,0],[1.4,b],[1,2],1) #returns initial guess for the fold parameters and a function that contains the formula for finding a fold\n",
+    "#y0f1,ffold1=create_foldfunc(invpend_1delay,inpend1tau,[a,b,tau],xlist[1003],[plist[1003],b],[1,2],1) #returns initial guess for the fold parameters and a function that contains the formula for finding a fold\n",
+    "yff1,convf1,=newton_new(ffold1,y0f1) #finds value of a for b=1.5\n",
+    "\n",
+    "a_fold=yff1[end-1]\n",
+    "x_fold=yff1[1]\n",
+    "\n",
+    "println(\"The information for the fold bifurcation: $yff1\")\n",
+    "println(\"The value of 'a' that a fold occurs at is: $a_fold\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "331b0ba7",
+   "metadata": {},
+   "source": [
+    "While this code produces an ```a``` value for a fold bifurcation, however, the bifurcation at ```a```=1 is actually a pitchfork bifurcation (rather than a fold bifurcation) due to the reflection symmetry."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4898f250",
    "metadata": {},
    "source": [
@@ -307,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "id": "b7a8a5dc",
    "metadata": {},
    "outputs": [
@@ -354,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "id": "74d1d50f",
    "metadata": {},
    "outputs": [
@@ -384,11 +428,11 @@
       "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:341 [inlined]\n",
       "  [9] \\(A::Matrix{Float64}, B::Vector{Float64})\n",
       "    @ LinearAlgebra C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\generic.jl:1132\n",
-      " [10] newton_new(f::var\"#30#34\"{var\"#fhopf#203\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#202\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, x0::Vector{Float64}; h::Float64, df::var\"#16#18\"{var\"#30#34\"{var\"#fhopf#203\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#202\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, Float64}, tol::Float64, maxit::Int64)\n",
+      " [10] newton_new(f::var\"#301#305\"{var\"#fhopf#502\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#501\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, x0::Vector{Float64}; h::Float64, df::var\"#287#289\"{var\"#301#305\"{var\"#fhopf#502\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#501\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, Float64}, tol::Float64, maxit::Int64)\n",
       "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\newton_new.jl:12\n",
       " [11] newton_new(f::Function, x0::Vector{Float64})\n",
       "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\newton_new.jl:2\n",
-      " [12] track_curve_new(userf::var\"#fhopf#203\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#202\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#32#36\"{var\"#fhopf#203\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#202\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
+      " [12] track_curve_new(userf::var\"#fhopf#502\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#501\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#303#307\"{var\"#fhopf#502\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#501\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
       "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\track_curve_new.jl:17\n",
       " [13] top-level scope\n",
       "    @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X35sZmlsZQ==.jl:3"
@@ -413,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "id": "614d4f23",
    "metadata": {},
    "outputs": [
@@ -478,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "id": "f3daba93",
    "metadata": {},
    "outputs": [
@@ -501,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "id": "c0732f12",
    "metadata": {},
    "outputs": [
@@ -533,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "id": "7fc15129",
    "metadata": {},
    "outputs": [
@@ -563,7 +607,7 @@
       "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:341 [inlined]\n",
       "  [9] \\(A::Matrix{Float64}, B::Vector{Float64})\n",
       "    @ LinearAlgebra C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\generic.jl:1132\n",
-      " [10] track_curve_new(userf::var\"#fhopf#266\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#265\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#32#36\"{var\"#fhopf#266\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#265\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
+      " [10] track_curve_new(userf::var\"#fhopf#606\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#605\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#303#307\"{var\"#fhopf#606\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#605\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
       "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\track_curve_new.jl:28\n",
       " [11] top-level scope\n",
       "    @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X20sZmlsZQ==.jl:2"
@@ -591,6 +635,28 @@
     "vlines!(ax6,1,linestyle=:solid, linewidth=:5,color=:red)\n",
     "ylims!(ax6,[0,6])\n",
     "fig6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "a7327a8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Float64}:\n",
+       " 0.01\n",
+       " 0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "xlist[1003]"
    ]
   }
  ],
