Changed 2nd trial tau value to sqrt(2) (from 0.75)

--- a/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_example.ipynb
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "614d4f23",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
     }
    ],
    "source": [
-    "tau_trial2=0.75#sqrt(2)\n",
+    "tau_trial2=sqrt(2)\n",
     "a=0.0 #parameter a - starts at 0 as this is the parameter we're varying over\n",
     "b=1.5 #parameter b - fixed \n",
     "nd=1 #number of delays (single delay so nd=1)\n",
