Changed include commands so the shared functions can be found

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "fab8d0a2",
    "metadata": {},
    "outputs": [
@@ -52,13 +52,13 @@
     "using LinearAlgebra\n",
     "include(\"mackeyglassfunc.jl\") #system of Mackey-Glass equation\n",
     "include(\"mackeytau.jl\") #Delay forumla for Mackey-Glass equation\n",
-    "include(\"f_deriv.jl\") #used to find state and/or parameter derivatives\n",
-    "include(\"jacobian_new.jl\") #Jacobian function\n",
-    "include(\"newton_new.jl\") #Newton function\n",
-    "include(\"F_eq.jl\") #Initialisates a function to find equilibria \n",
-    "include(\"track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
-    "include(\"stab_func.jl\") #finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
-    "include(\"create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values"
+    "include(\"../shared/f_deriv.jl\") #used to find state and/or parameter derivatives\n",
+    "include(\"../shared/jacobian_new.jl\") #Jacobian function\n",
+    "include(\"../shared/newton_new.jl\") #Newton function\n",
+    "include(\"../shared/F_eq.jl\") #Initialisates a function to find equilibria \n",
+    "include(\"../shared/track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
+    "include(\"../shared/stab_func.jl\") #finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
+    "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values"
    ]
   },
   {
