--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "a584c15a",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
     "include(\"../shared/f_deriv.jl\") #used to find state and/or parameter derivatives\n",
     "include(\"../shared/jacobian_new.jl\") #Jacobian function\n",
     "include(\"../shared/newton_new.jl\") #Newton function\n",
-    "include(\"../shared/F_eq.jl\") #Initialisates a function to find equilibria \n",
+    "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
     "include(\"../shared/track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
     "include(\"../shared/stab_func.jl\")#finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
     "include(\"../shared/create_hopffunc.jl\")#finds initial guess for Hopf information and creates a function that can find the true Hopf values"
@@ -63,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "9fc884f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0.0, 0.0, 2.34], var\"#f_equilibrium#84\"{Int64, typeof(neuronfunc), Vector{Float64}, Int64, Int64}(4, Main.neuronfunc, [0.5, -1.0, 1.0, 2.34, 0.2, 0.2, 1.5], 3, 2))"
+       "([0.0, 0.0, 2.34], var\"#f_equilibrium#25\"{Int64, typeof(neuronfunc), Vector{Float64}, Int64, Int64}(4, Main.neuronfunc, [0.5, -1.0, 1.0, 2.34, 0.2, 0.2, 1.5], 3, 2))"
       ]
      },
      "metadata": {},
@@ -88,13 +88,13 @@
     "taus=1.5\n",
     "\n",
     "nd=3 #there are 3 delays\n",
-    "y01,feq=F_eq(neuronfunc,[0.0,0],[k,beta,a12,a21,tau1,tau2,taus], nd, par_indx=4)#varying paramter a21 so parameter index is 4\n",
+    "y01,feq=create_ststfunc(neuronfunc,[0.0,0],[k,beta,a12,a21,tau1,tau2,taus], nd, par_indx=4)#varying paramter a21 so parameter index is 4\n",
     "#The above outputs an initial equilibirium and a function to find the equilibria"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "23a36df6",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "5f278333",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "a1951fbd",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
     }
    ],
    "source": [
-    "y02,feq2=F_eq(neuronfunc,[0.0,0],[k,beta,a12,0,tau1,tau2,taus], nd, par_indx=4) #we set a21 to 0 and finding starting point for equilibria branching\n",
+    "y02,feq2=create_ststfunc(neuronfunc,[0.0,0],[k,beta,a12,0,tau1,tau2,taus], nd, par_indx=4) #we set a21 to 0 and finding starting point for equilibria branching\n",
     "alist1,ytan1=track_curve_new(feq2,y02,[0.0,0,1],nmax=550)#tracks equilibria to give equilibria branch\n",
     "\n",
     "xmat1=hcat([u[1] for u in alist1],[u[2] for u in alist1]) #finds the values of x1 and x2 for the equilibria\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "ea4aa717",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "e08cf059",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "ffd8cae6",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "b3c85975",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "85dfe439",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "66b25617",
    "metadata": {},
    "outputs": [
